# mnn-rs

./: .gitmodules  Cargo.toml
mnn-bridge/: Cargo.toml
mnn-sync/: Cargo.toml
mnn-sys/: Cargo.toml  build.rs
mnn-sys/src/: tracing.rs
tests/: resizing.rs
