[package]
name = "mnn-sync"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
error-stack.workspace = true
flume = { version = "0.11.1", default-features = false, features = [
  "eventual-fairness",
  "nanorand",
] }
mnn.workspace = true
oneshot = "0.1.11"
tracing = { version = "0.1.41", optional = true }

[features]
tracing = ["dep:tracing", "mnn/tracing"]

[dev-dependencies]
tracing-test = "0.2.5"
