[package]
name = "mnn-sys"
version = "0.1.0"
edition = "2024"
links = "mnn"
license = { workspace = true }

[build-dependencies]
anyhow = "1.0.98"
bindgen = { version = "0.72.0", features = ["experimental"] }
cc = { version = "1.2.30", features = [] }
cmake = { git = "https://github.com/blonteractor/cmake-rs", features = [
  "parallel",
] }
diffy = "0.4.2"
dunce = "1.0.5"
fs_extra = "1.3.0"
itertools = "0.14.0"
tap = "1.0.1"

[features]
vulkan = []
metal = []
coreml = ["metal"]
opencl = []
openmp = []
opengl = []
mnn-threadpool = []
default = ["mnn-threadpool"]
crt_static = []

[dependencies]
libc = "0.2.174"
once_cell = "1.21.3"
tracing-core = "0.1.34"
